--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Match Game</title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/bootstrap.css">
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="./resources/css/style.css">
 </head>
 <body>
   <script
@@ -14,7 +16,7 @@
     crossorigin="anonymous"></script>
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 rule">
         <h1>Match Game</h1>
         <h5>Rules</h5>
         <p>Click on a card to reveal the number on the other side. Click on a second card to try and find a match to the first. If you succeed, the pair will be removed from play. If not, try again!</p>
@@ -23,18 +25,22 @@
         </div>
         <div class="col-md-9" id="game">
           <div class="row">
-            <div class="col-md-4 card">1</div>
-            <div class="col-md-4 card">2</div>
-            <div class="col-md-4 card">3</div>
-            <div class="col-md-4 card">4</div>
-            <div class="col-md-4 card">5</div>
-            <div class="col-md-4 card">6</div>
-            <div class="col-md-4 card">7</div>
-            <div class="col-md-4 card">8</div>
-            <div class="col-md-4 card">9</div>
-            <div class="col-md-4 card">10</div>
-            <div class="col-md-4 card">11</div>
-            <div class="col-md-4 card">12</div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
+            <div class="col-md-3 card"></div>
           </div>
         </div>
       </div>
